<resources>
    <string name="app_name">Charitably</string>

    <string name="generic_error">There was an unexpected error</string>
    <string name="view_contact_info">Contact Info</string>
    <string name="open_whatsapp">
        https://wa.me/%1$s?text=I\'m interested in your%2$s
    </string>

    <string name="new_donation_title">Create your Donation</string>
    <string name="new_donation_title_hint">Title</string>
    <string name="new_donation_description_hint">Description</string>
    <string name="new_donation_type">Donation Type</string>
    <string name="new_donation_type_food">Food</string>
    <string name="new_donation_type_clothing">Clothing</string>
    <string name="create_donation_button">Create Donation</string>

    <string name="donation_sent">Donation sent successfully!</string>
    <string name="default_error_login">Verifique sus datos</string>
    <string name="default_error">Opps!! Ha ocurrido un error</string>
    <string name="default_error_login_user_exist">this user exist</string>

</resources>
